--- a/Gui/src/Dialogs/ConfigDialog.ui
+++ b/Gui/src/Dialogs/ConfigDialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>BruteConfigDialog</class>
- <widget class="QDialog" name="BruteConfigDialog">
+ <class>ConfigDialog</class>
+ <widget class="QDialog" name="ConfigDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
