--- a/Gui/src/MainWindow.ui
+++ b/Gui/src/MainWindow.ui
@@ -27,12 +27,32 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QToolButton {
-	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(85, 85, 85, 255), stop:1 grey); /*rgb(90, 100, 110));*/
-	color: rgb(0,0,0);
+	border-style: outset;
+	border-width: 2px;
+	border-top-color: qlineargradient(spread:pad, x1:0.5, y1:0.6, x2:0.5, y2:0.4, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-right-color: qlineargradient(spread:pad, x1:0.4, y1:0.5, x2:0.6, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-left-color: qlineargradient(spread:pad, x1:0.6, y1:0.5, x2:0.4, y2:0.5, stop:0 rgba(115, 115, 115, 255), stop:1 rgba(62, 62, 62, 255));
+	border-bottom-color: rgb(58, 58, 58);
+	border-bottom-width: 1px;
 	border-style: solid;
-	border-color: rgb(50, 50, 50);
-	border-width: 1px;
-	border-radius: 15px
+	border-radius: 15px;
+	color: rgb(0,0,0);
+	color: grey;
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(77, 77, 77, 255));
+}
+
+QToolButton:hover {
+	border-style: outset;
+	border-width: 2px;
+	border-top-color: qlineargradient(spread:pad, x1:0.5, y1:0.6, x2:0.5, y2:0.4, stop:0 rgba(180, 180, 180, 255), stop:1 rgba(0,0,0, 255));
+	border-right-color: qlineargradient(spread:pad, x1:0.4, y1:0.5, x2:0.6, y2:0.5, stop:0 rgba(180, 180, 180, 255), stop:1 rgba(0,0,0,255));
+	border-left-color: qlineargradient(spread:pad, x1:0.6, y1:0.5, x2:0.4, y2:0.5, stop:0 rgba(180, 180, 180, 255), stop:1 rgba(0,0,0,255));
+	border-bottom-color: rgb(115, 115, 115);
+	border-bottom-width: 1px;
+	border-style: solid;
+	border-radius: 15px;
+	color: rgb(0,0,0);
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
 }
 
 QSpinBox {
@@ -59,7 +79,7 @@ QComboBox QWidget{
 	border-color: black;
 	border-width: 1px;
 	color: rgb(230,230,230);
-	background-color:rgb(82, 82, 82);
+	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(77, 77, 77, 255));
 	selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:0.7 rgba(143, 143, 107));
 }
 
@@ -234,7 +254,7 @@ QMenuBar {
 }
 
 QMenu {
-	background-color:rgb(82,82,82);
+	background-color:rgb(77,77,77);
 }
 
 QMenuBar::item {
@@ -259,7 +279,7 @@ QMenu::​separator {
 
 QMenu::item {
 	color:rgb(223,219,210);
-	background-color:rgb(82,82,82);
+	background-color:rgb(77,77,77);
 	padding-left:20px;
 	padding-top:4px;
 	padding-bottom:4px;
