--- a/Gui/src/IpTab/Ip.ui
+++ b/Gui/src/IpTab/Ip.ui
@@ -85,6 +85,16 @@
            <string>Reverse Lookup</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>Whois Lookup </string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Ip to Asn</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item>
