--- a/Gui/src/LevelTab/Level.ui
+++ b/Gui/src/LevelTab/Level.ui
@@ -66,7 +66,7 @@
        <item>
         <widget class="QLabel" name="label_6">
          <property name="text">
-          <string>*Number Of Levels</string>
+          <string>*Number Of Subdomain Levels</string>
          </property>
         </widget>
        </item>
@@ -383,7 +383,7 @@
                   </font>
                  </property>
                  <property name="text">
-                  <string>Enumerated Info:</string>
+                  <string>Enumerated Subdomains:</string>
                  </property>
                 </widget>
                </item>
@@ -407,41 +407,6 @@
                    <height>20</height>
                   </size>
                  </property>
-                 <property name="styleSheet">
-                  <string notr="true"/>
-                 </property>
-                 <property name="frameShape">
-                  <enum>QFrame::Box</enum>
-                 </property>
-                 <property name="frameShadow">
-                  <enum>QFrame::Raised</enum>
-                 </property>
-                 <property name="text">
-                  <string/>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QLabel" name="label_5">
-                 <property name="sizePolicy">
-                  <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
-                   <horstretch>0</horstretch>
-                   <verstretch>0</verstretch>
-                  </sizepolicy>
-                 </property>
-                 <property name="font">
-                  <font>
-                   <weight>75</weight>
-                   <bold>true</bold>
-                  </font>
-                 </property>
-                 <property name="text">
-                  <string>Level:</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QLabel" name="label_level">
                  <property name="styleSheet">
                   <string notr="true"/>
                  </property>
@@ -633,6 +598,41 @@
                <height>20</height>
               </size>
              </property>
+             <property name="styleSheet">
+              <string notr="true"/>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::Box</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_5">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="font">
+              <font>
+               <weight>75</weight>
+               <bold>true</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string>Level:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_level">
              <property name="styleSheet">
               <string notr="true"/>
              </property>
