--- a/Gui/src/themes/droid.qss
+++ b/Gui/src/themes/droid.qss
@@ -111,25 +111,30 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
     background: rgb(97,97,97);
 }
 
-QSplitter::handle:horizontal {
-	background-color:rgb(105,105,105);
-	width: 10px;
+QSplitter::handle:horizontal{
+	background-color:rgb(82,82,82);
+	width: 5px;
 }
 
-QListWidget, QTreeView, QTableView{
+QSplitter::handle:vertical{
+	background-color:rgb(82,82,82);
+	height: 5px
+}
+
+QListWidget, QTreeView, QTableView, QPlainTextEdit{
 	selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:1 rgb(143, 143, 107));
-	background-color:rgb(82, 82, 82);
+	background-color: rgb(65, 75, 80);
 	color: rgb(230,230,230);
 	border-style: solid;
 	border-color: black;
 	border-width: 1px;
 }
 
-QListWidget::item:selected, QTreeView::item:selected, QTableView::item:selected{
+QListWidget::item:selected, QTreeView::item:selected, QTableView::item:selected, QPlainTextEdit::item:selected{
 	background-color: rgb(135, 135, 100);
 }
 
-QListWidget::item:hover, QTreeView::item:hover, QTableView::item:hover {
+QListWidget::item:hover, QTreeView::item:hover, QTableView::item:hover, QPlainTextEdit::item:hover {
 	background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(77, 77, 77, 255), stop:0.8 rgb(135, 135, 100));
 }
 
