--- a/gui/src/engines/save/Save.ui
+++ b/gui/src/engines/save/Save.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>Save</class>
- <widget class="QDialog" name="Save">
+ <widget class="QWidget" name="Save">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Form</string>
   </property>
   <property name="styleSheet">
    <string notr="true"/>
