--- a/gui/res/themes/ice.qss
+++ b/gui/res/themes/ice.qss
@@ -63,9 +63,12 @@ QComboBox QWidget {
         border-style: solid;
         border-color: black;
         border-width: 1px;
-        color: rgb(230,230,230);
+        color: rgb(250,250,250);
         background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(70, 70, 70, 255));
-        selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(60, 60, 60, 255), stop:1 rgb(40, 51, 63));
+        selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(70, 70, 70, 255), stop:1 rgb(70, 81, 93));
+        selection-border-style: solid;
+        selction-border-color: black;
+        selection-border-width: 1px;
 }
 
 /********** Line *************/
@@ -87,6 +90,13 @@ QFrame#frame, QFrame#frame_newSpecialWordlist, QFrame#frame_nameservers {
 /******** QLabels ***********/
 QLabel#label_resultsCount, QLabel#label_targetsCount, QLabel#label_wordlistCount, QLabel#label_srvWordlistCount, QLabel#label_level, QLabel#label_srvResultsCount {
         background-color:rgb(52, 52, 52);
+}
+
+QScrollArea {
+    border-style: outset;
+    border-style: solid;
+    border-color: rgb(50,50,50);
+    border-width: 1px;
 }
 
 QAbstractScrollArea {
@@ -151,14 +161,10 @@ QListWidget, QTreeView, QTableView{
 }
 
 QListWidget::item:selected, QTreeView::item:selected, QTableView::item:selected{
-        border-style: solid;
-        border-color: black;
         background-color: rgb(50, 61, 73);
 }
 
 QListWidget::item:hover, QTreeView::item:hover, QTableView::item:hover {
-        border-style: solid;
-        border-color: black;
         background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(60, 60, 60, 255), stop:1 rgb(60, 71, 83));
 }
 
@@ -363,8 +369,8 @@ QCheckBox::indicator:checked {
 QCheckBox::indicator:unchecked {
         border-style:solid;
         border-width:1px;
+        background-color: rgb(200,200,200);
         border-color: rgb(90, 90, 90);
-        background-color: rgb(230,230,230);
 }
 
 QRadioButton {
