--- a/gui/src/MainWindow.ui
+++ b/gui/src/MainWindow.ui
@@ -91,9 +91,12 @@ QComboBox QWidget {
         border-style: solid;
         border-color: black;
         border-width: 1px;
-        color: rgb(230,230,230);
+        color: rgb(250,250,250);
         background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(70, 70, 70, 255));
-        selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(60, 60, 60, 255), stop:1 rgb(40, 51, 63));
+        selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(70, 70, 70, 255), stop:1 rgb(70, 81, 93));
+        selection-border-style: solid;
+        selction-border-color: black;
+        selection-border-width: 1px;
 }
 
 /********** Line *************/
@@ -115,6 +118,13 @@ QFrame#frame, QFrame#frame_newSpecialWordlist, QFrame#frame_nameservers {
 /******** QLabels ***********/
 QLabel#label_resultsCount, QLabel#label_targetsCount, QLabel#label_wordlistCount, QLabel#label_srvWordlistCount, QLabel#label_level, QLabel#label_srvResultsCount {
         background-color:rgb(52, 52, 52);
+}
+
+QScrollArea {
+    border-style: outset;
+    border-style: solid;
+    border-color: rgb(50,50,50);
+    border-width: 1px;
 }
 
 QAbstractScrollArea {
@@ -179,14 +189,10 @@ QListWidget, QTreeView, QTableView{
 }
 
 QListWidget::item:selected, QTreeView::item:selected, QTableView::item:selected{
-        border-style: solid;
-        border-color: black;
         background-color: rgb(50, 61, 73);
 }
 
 QListWidget::item:hover, QTreeView::item:hover, QTableView::item:hover {
-        border-style: solid;
-        border-color: black;
         background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(60, 60, 60, 255), stop:1 rgb(60, 71, 83));
 }
 
@@ -391,8 +397,8 @@ QCheckBox::indicator:checked {
 QCheckBox::indicator:unchecked {
         border-style:solid;
         border-width:1px;
+        background-color: rgb(200,200,200);
         border-color: rgb(90, 90, 90);
-        background-color: rgb(230,230,230);
 }
 
 QRadioButton {
@@ -542,7 +548,25 @@ QRadioButton:hover {
      <string>Help</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menuTools">
+    <property name="title">
+     <string>Tools</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuAbout">
+    <property name="title">
+     <string>About</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuOptions">
+    <property name="title">
+     <string>Options</string>
+    </property>
+   </widget>
    <addaction name="menufile"/>
+   <addaction name="menuOptions"/>
+   <addaction name="menuTools"/>
+   <addaction name="menuAbout"/>
    <addaction name="menuHelp"/>
   </widget>
  </widget>
