--- a/gui/src/engines/brute/Brute.ui
+++ b/gui/src/engines/brute/Brute.ui
@@ -18,10 +18,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_8">
    <property name="spacing">
-    <number>7</number>
+    <number>6</number>
    </property>
    <property name="leftMargin">
     <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>5</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
