--- a/gui/src/engines/dns/Dns.ui
+++ b/gui/src/engines/dns/Dns.ui
@@ -18,13 +18,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_12">
    <property name="spacing">
-    <number>7</number>
+    <number>6</number>
    </property>
    <property name="leftMargin">
     <number>0</number>
    </property>
    <property name="topMargin">
-    <number>9</number>
+    <number>5</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
@@ -34,6 +34,9 @@
    </property>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>4</number>
+     </property>
      <item>
       <widget class="QLabel" name="label">
        <property name="sizePolicy">
