--- a/gui/src/engines/ip/Ip.ui
+++ b/gui/src/engines/ip/Ip.ui
@@ -15,10 +15,13 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <property name="spacing">
-    <number>7</number>
+    <number>6</number>
    </property>
    <property name="leftMargin">
     <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>5</number>
    </property>
    <property name="rightMargin">
     <number>0</number>
@@ -28,6 +31,9 @@
    </property>
    <item>
     <layout class="QVBoxLayout" name="verticalLayout_21">
+     <property name="spacing">
+      <number>4</number>
+     </property>
      <item>
       <widget class="QLabel" name="label_13">
        <property name="sizePolicy">
