--- a/gui/src/MainWindow.ui
+++ b/gui/src/MainWindow.ui
@@ -7,26 +7,24 @@
     <x>0</x>
     <y>0</y>
     <width>1000</width>
-    <height>680</height>
+    <height>686</height>
    </rect>
-  </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
-   </sizepolicy>
-  </property>
-  <property name="minimumSize">
-   <size>
-    <width>1000</width>
-    <height>680</height>
-   </size>
   </property>
   <property name="windowTitle">
    <string>Sub Suite</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QToolButton {
+   <string notr="true">QStatusBar {
+    border-style: outset;
+    border-width: 1px;
+    border-top-color: grey;
+    border-right-color: grey;
+    border-left-color: grey;
+    border-bottom-color: transparent;
+    border-style: solid;
+}
+
+QToolButton {
         border-style: outset;
         border-width: 2px;
         border-top-color: qlineargradient(spread:pad, x1:0.5, y1:0.6, x2:0.5, y2:0.4, stop:0 rgba(150, 150, 150, 255), stop:1 rgba(0,0,0, 255));
@@ -94,9 +92,6 @@ QComboBox QWidget {
         color: rgb(250,250,250);
         background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(57, 57, 57, 255), stop:1 rgba(70, 70, 70, 255));
         selection-background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(70, 70, 70, 255), stop:1 rgb(70, 81, 93));
-        selection-border-style: solid;
-        selction-border-color: black;
-        selection-border-width: 1px;
 }
 
 /********** Line *************/
@@ -307,10 +302,10 @@ QMenuBar::item:selected {
 }
 
 QMenu::item:selected {
-        color:rgb(255,255,255);
+        color:rgb(0,0,0);
         border-style: solid;
         border-color: black;
-        background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(60, 60, 60, 255), stop:1 rgb(40, 51, 63));
+        background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(60, 60, 60, 255), stop:0.4 rgb(50, 61, 72));
 }
 
 QMenu::​separator {
@@ -342,7 +337,7 @@ QTabWidget::pane {
         border-top-width: 1px;
         border-right-width: 1px;
         border-left-width: 1px;
-        border-bottom-width: 1px;
+        border-bottom-width: 0px;
 }
 
 QTabBar::tab {
@@ -413,31 +408,34 @@ QRadioButton:hover {
 }
 </string>
   </property>
-  <property name="iconSize">
-   <size>
-    <width>40</width>
-    <height>40</height>
-   </size>
-  </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_2">
-    <property name="spacing">
-     <number>3</number>
-    </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
     <property name="leftMargin">
-     <number>2</number>
+     <number>0</number>
     </property>
     <property name="topMargin">
-     <number>2</number>
+     <number>0</number>
     </property>
     <property name="rightMargin">
-     <number>2</number>
+     <number>0</number>
     </property>
     <property name="bottomMargin">
      <number>0</number>
     </property>
     <item>
      <widget class="QTabWidget" name="tabWidget_mainTab">
+      <property name="minimumSize">
+       <size>
+        <width>1000</width>
+        <height>650</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="font">
        <font>
         <weight>75</weight>
@@ -451,82 +449,6 @@ QRadioButton:hover {
       </property>
      </widget>
     </item>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <property name="spacing">
-         <number>5</number>
-        </property>
-        <property name="bottomMargin">
-         <number>2</number>
-        </property>
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="font">
-           <font>
-            <weight>75</weight>
-            <bold>true</bold>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color:rgb(80, 80, 80);</string>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::Panel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Sunken</enum>
-          </property>
-          <property name="lineWidth">
-           <number>2</number>
-          </property>
-          <property name="text">
-           <string>Status:   </string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="label_status">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="font">
-           <font>
-            <weight>50</weight>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color:rgb(80, 80, 80);</string>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::Panel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Sunken</enum>
-          </property>
-          <property name="lineWidth">
-           <number>2</number>
-          </property>
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-     </layout>
-    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -538,14 +460,14 @@ QRadioButton:hover {
      <height>18</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menufile">
+   <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>file</string>
+     <string>File</string>
     </property>
    </widget>
-   <widget class="QMenu" name="menuHelp">
+   <widget class="QMenu" name="menuProject">
     <property name="title">
-     <string>Help</string>
+     <string>Project</string>
     </property>
    </widget>
    <widget class="QMenu" name="menuTools">
@@ -553,22 +475,23 @@ QRadioButton:hover {
      <string>Tools</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+   </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
      <string>About</string>
     </property>
    </widget>
-   <widget class="QMenu" name="menuOptions">
-    <property name="title">
-     <string>Options</string>
-    </property>
-   </widget>
-   <addaction name="menufile"/>
-   <addaction name="menuOptions"/>
+   <addaction name="menuFile"/>
+   <addaction name="menuProject"/>
    <addaction name="menuTools"/>
    <addaction name="menuAbout"/>
    <addaction name="menuHelp"/>
   </widget>
+  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
