--- a/gui/src/engines/dns/Dns.ui
+++ b/gui/src/engines/dns/Dns.ui
@@ -21,13 +21,13 @@
     <number>6</number>
    </property>
    <property name="leftMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
    <property name="topMargin">
     <number>5</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
@@ -481,6 +481,9 @@
              <string>Records</string>
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout_7">
+             <property name="spacing">
+              <number>5</number>
+             </property>
              <property name="leftMargin">
               <number>6</number>
              </property>
@@ -491,7 +494,7 @@
               <number>6</number>
              </property>
              <property name="bottomMargin">
-              <number>6</number>
+              <number>0</number>
              </property>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -591,6 +594,9 @@
              <string>SRV</string>
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout_13">
+             <property name="spacing">
+              <number>5</number>
+             </property>
              <property name="leftMargin">
               <number>6</number>
              </property>
@@ -601,7 +607,7 @@
               <number>6</number>
              </property>
              <property name="bottomMargin">
-              <number>6</number>
+              <number>0</number>
              </property>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_14">
