--- a/gui/src/engines/level/Level.ui
+++ b/gui/src/engines/level/Level.ui
@@ -21,13 +21,13 @@
     <number>6</number>
    </property>
    <property name="leftMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
    <property name="topMargin">
     <number>5</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>4</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
@@ -379,6 +379,9 @@
              <string>Results</string>
             </attribute>
             <layout class="QVBoxLayout" name="verticalLayout_21">
+             <property name="spacing">
+              <number>5</number>
+             </property>
              <property name="leftMargin">
               <number>6</number>
              </property>
@@ -389,7 +392,7 @@
               <number>6</number>
              </property>
              <property name="bottomMargin">
-              <number>6</number>
+              <number>0</number>
              </property>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_19">
